# DATN_ASCON_ESP_PI

./: README.md
01_Projects/0_1_MCU_HLK_LD2460/Kelic_Sonix/: tesst.c
01_Projects/0_1_MCU_HLK_LD2460/Kelic_Sonix/01_Test/: 01_Test.uvguix.ADMIN  01_Test.uvoptx  01_Test.uvprojx  main.c
01_Projects/0_1_MCU_HLK_LD2460/Kelic_Sonix/02_Test/: 02_Test.uvguix.ADMIN  02_Test.uvoptx  02_Test.uvprojx
01_Projects/0_1_MCU_HLK_LD2460/Kelic_Sonix/03_Test/: 03_Test.uvmpw  03_Test.uvmpw.uvgui.ADMIN
01_Projects/0_1_MCU_HLK_LD2460/Kelic_Sonix/04_tes/: tesst.uvmpw.uvgui.ADMIN
01_Projects/0_1_MCU_HLK_LD2460/Kelic_Sonix/ADEV/: 01_Test.uvoptx  ADEV.uvguix.ADMIN  ADEV.uvoptx  ADEV.uvprojx  main.c
01_Projects/0_1_MCU_HLK_LD2460/Kelic_Sonix/ADEV - Copy/: 01_Test.uvguix.ADMIN  ADEV.uvguix.ADMIN  ADEV.uvoptx  ADEV.uvprojx  main.c
01_Projects/0_1_MCU_HLK_LD2460/Kelic_Sonix/ADEV - Copy (2)/: ADEV.uvguix.ADMIN  ADEV.uvoptx  ADEV.uvprojx
01_Projects/0_1_MCU_HLK_LD2460/Kelic_Sonix/ADEV_V2/: ADEV_V2.uvmpw  ADEV_V2.uvmpw.uvgui.ADMIN  System_Management.h  main_task.h
01_Projects/0_1_MCU_HLK_LD2460/Lib_HAL/Code/: app.h  hal_it.c  hal_msp.c  main_evb.c  main_ll.c  usb_device.c  usb_device.h  usbd_report_if.c  usbd_report_if.h  usbd_storage_if.h
01_Projects/0_1_MCU_HLK_LD2460/Lib_HAL/Com/: retarget_io.c  sn34f78x_hal_def.h  sn34f78x_ll.h  sn34f78x_ll_def.h
04_University/HK_225/225_DATN_KTDT/Code_Esp/Merg_Node_V3/main/: BH1750.c  BH1750.h  CMakeLists.txt  DHT22.c  DHT22.h  DS3231.c  DS3231.h  LCD_I2C.c  LCD_I2C.h  api.h  ascon.c  ascon.h  decrypt.c  encrypt.c  main.c
STM32/: suon.c
(+4031 files in other folders)
